--- a/data import.Rmd
+++ b/data import.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Simple document"
-output: html_document
+title: "data import"
+output: github_document
 ---
 
 I'm an R Markdown document! 
@@ -10,10 +10,14 @@ I'm an R Markdown document!
 Here's a **code chunk** that samples from 
 a _normal distribution_:
 
-```{r}
-samp = rnorm(100)
-length(samp)
+```{r setup}
+library(tidyverse)
+
+library(readr)
+FAS_litters <- read_csv("data_import_examples/FAS_litters.csv")
+View(FAS_litters)ge
 ```
+
 
 # Section 2
 
