look at the help file

--- a/data import.Rmd
+++ b/data import.Rmd
@@ -41,7 +41,13 @@ the signal :: means I will use skim function in the skimr package
 skimr::skim(litters_df)
 ```
 
+##options to read csv
+
+```{r}
+litters_df=read_csv("./data/FAS_litters.csv",skip=10, col_names=FALSE)
+```
 
 
 
+check out`read_csv(` for more information
 
