--- a/data import.Rmd
+++ b/data import.Rmd
@@ -47,7 +47,34 @@ skimr::skim(litters_df)
 litters_df=read_csv("./data/FAS_litters.csv",skip=10, col_names=FALSE)
 ```
 
-
-
 check out`read_csv(` for more information
+
+
+##other file formats,excel and sas
+
+read in an excel file
+```{r}
+library(readxl)
+mlb_df=read_excel("./data/mlb11.xlsx")
+mlb_df=read_excel("./data/mlb11.xlsx", range= "A1:F7")
+mlb_df
+```
+
+
+READ in a SAS file
+
+```{r}
+library(haven)
+pulse_df=read_sas("./data/public_pulse_data.sas7bdat")
+pulse_df
+```
+
+
+
+
+
+
+
+
+
 
