--- a/data import.Rmd
+++ b/data import.Rmd
@@ -86,6 +86,14 @@ litters_readr
 ```
 litters_base would print all the rows, take more time to read at 
 
+##export data
+
+
+export the mlb sub-tibble
+
+```{r}
+write_csv(mlb_df,"./data/mlb_subtable.csv")
+```
 
 
 
