--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -13,7 +13,7 @@ litters_df=read_csv("./data/FAS_litters.csv")
 litters_df=janitor::clean_names(litters_df)
 ```
 
-##`select` what we want to keep
+##`select` what we want to keepm select function operates on columns 
 
 choose some columns and not others
 
@@ -63,6 +63,64 @@ select(litters_df, litter_number,everything())
 ```{r}
 relocate(litters_df,litter_number)
 ```
+
+
+##filter function operates on rows
+
+```{r}
+filter(litters_df,gd0_weight < 22)
+```
+
+```{r}
+filter(litters_df,gd0_weight >= 22)
+```
+
+
+##logical operator we want to ask if gd_of_birth  equals to 20, == tests for equality, we are not giving gd_of_birth a value of 20, just test if gd_of_birth  equals to 22 is true or not
+```{r}
+filter(litters_df,gd_of_birth == 20)
+```
+
+
+##we want to see all the rows that gd_of_birth  equals to 22 is not true
+```{r}
+filter(litters_df,!(gd_of_birth == 20))
+```
+the code chunk below will give me everything that gd_of_birth not equals 20
+another way to do 
+
+```{r}
+filter(litters_df,gd_of_birth != 20)
+```
+
+## i want both to be true
+```{r}
+filter(litters_df,gd0_weight>=22,gd_of_birth == 20)
+```
+
+```{r}
+filter(litters_df,group=="Con7")
+```
+
+```{r}
+filter(litters_df,group=="Mod8")
+```
+
+## want to see if group equals to either Con7 or Mod8
+
+```{r}
+filter(litters_df,group %in% c("Con7","Mod8"))
+```
+
+
+
+
+
+
+
+
+
+
 
 
 
