application of pipeline

--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -136,6 +136,21 @@ first arrange by pups_born_alive, then arrange by gd0_weight
 arrange(litters_df, pups_born_alive,gd0_weight)
 ```
 
+## learn to use pipeline
+```{r}
+litters_df=
+  read_csv("./data/FAS_litters.csv", na=c("NA",".","")) %>% 
+                        janitor::clean_names() %>% 
+                      select(-pups_born_alive) %>% 
+                      filter(group=="Con7") %>% 
+            mutate(
+              wt_gain=gd18_weight-gd0_weight,
+              group=str_to_lower(group)
+            )
+            
+```
+
+
 
 
 
