--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -7,6 +7,58 @@ output: github_document
 library(tidyverse)
 ```
 
+##pivot_longer
+
+load the PULSE data
+
+```{r}
+pulse_data=
+  haven::read_sas("./data/public_pulse_data.sas7bdat") %>% 
+  janitor::clean_names()
+```
+
+wide format to long format
+```{r}
+pulse_data_tidy=
+  pulse_data %>% 
+  pivot_longer(
+    bdi_score_bl:bdi_score_12m,
+    names_to="visit",
+    names_prefix ="bdi_score_",
+    values_to="bdi"
+  )
+```
+
+rewrite, combines and extend to add a mutate
+```{r}
+ pulse_data=
+  haven::read_sas("./data/public_pulse_data.sas7bdat") %>% 
+  janitor::clean_names()%>% 
+  pivot_longer(
+    bdi_score_bl:bdi_score_12m,
+    names_to="visit",
+    names_prefix ="bdi_score_",
+    values_to="bdi"
+  ) %>% 
+  relocate(id,visit) %>% 
+  mutate(visit=recode(visit,"bl"="00m"))
+```
+
+## change the bl column to make the bl value into 00m
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
